shared/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airline-ingress
  namespace: airline-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: airline-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTP": 8080}, {"HTTP": 8081}, {"HTTP": 8082}]'
spec:
  rules:
    - host: flights.izones.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-flight
                port:
                  number: 8080
    - host: auth.izones.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-auth
                port:
                  number: 8081
    - host: payment.izones.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-payment
                port:
                  number: 8082
